Light/dark mode + bug fix

--- a/src/css/BottomPopup.css
+++ b/src/css/BottomPopup.css
@@ -6,8 +6,6 @@
     min-height: 15vh;
     max-height: 50vh;
     height: auto;
-    background: #121212;
-    color: white;
     padding: 16px;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
@@ -17,6 +15,16 @@
     flex-direction: column;
     animation: slideUp 0.3s ease-out;
     overflow: hidden;
+}
+
+.bottom-popup.light {
+    background: #e3e3e3;
+    color: #000000;
+}
+
+.bottom-popup.dark {
+    background: #121212;
+    color: white;
 }
 
 @keyframes slideUp {
@@ -62,7 +70,8 @@
 
 .popup-header button {
     background: transparent;
-    color: white;
+    #color: white;
+    color: black;
     font-size: 20px;
     border: none;
     cursor: pointer;
@@ -148,4 +157,22 @@
     justify-content: center;
     width: 100px;
     height: 40px;
+}
+
+
+
+.bottom-popup.light .popup-header button {
+    color: black;
+}
+
+.bottom-popup.dark .popup-header button {
+    color: white;
+}
+
+.bottom-popup.light .slider-icon.tv {
+    background-color: #a8a8a8;
+}
+
+.bottom-popup.dark .slider-icon.tv {
+    background-color: #3f3f3f;
 }
